fixed about spacing and added email link to contact

--- a/css/about.css
+++ b/css/about.css
@@ -104,6 +104,7 @@ body {
   position: relative;
   font-size: 2rem;
   display: block;
+  text-decoration: none;
 }
 
 #copyright {
@@ -176,11 +177,11 @@ body {
 
 #wallcont {
   width: 100%;
-  height: 200%;
   background-image: url("/images/backgroundtile.png");
   background-repeat: repeat;
   margin: 0;
   padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .introtext {
