--- a/css/music.css
+++ b/css/music.css
@@ -104,6 +104,7 @@ body {
   position: relative;
   font-size: 2rem;
   display: block;
+  text-decoration: none;
 }
 
 #copyright {
