--- a/css/talk.css
+++ b/css/talk.css
@@ -104,6 +104,7 @@ body {
   position: relative;
   font-size: 2rem;
   display: block;
+  text-decoration: none;
 }
 
 #copyright {
@@ -195,6 +196,7 @@ body {
   padding: 0;
   top: -4.5rem;
   text-align: center;
+  text-decoration: none;
 }
 
 #emailthing {
@@ -208,4 +210,5 @@ body {
   align-items: center;
   text-align: center;
   height: 3rem;
+  text-decoration: none;
 }
